feat: bulk register external provider models
